# AI-FinalProject-SATSolver

./: CMakeLists.txt
source/: CMakeLists.txt
source/include/: clause.h  heap.h  solver.cpp  solver.h
source/source/: main.cpp
